# vr_types

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dummy_handler.c
examples/simple/: Cargo.toml  setup.sh  teardown.sh
examples/simple/src/: main.rs  nexthop.rs  route.rs  vif.rs  vrf.rs
src/: genetlink.rs  lib.rs  sandesh.rs  utils.rs  vr_bridge_table_data.rs  vr_drop_stats.rs  vr_fc_map.rs  vr_flow.rs  vr_flow_response.rs  vr_flow_table_data.rs  vr_hugepage_config.rs  vr_interface.rs  vr_mem_stats.rs  vr_message.rs  vr_mirror.rs  vr_mpls.rs  vr_nexthop.rs  vr_pkt_droplog.rs  vr_qos_map.rs  vr_response.rs  vr_route.rs  vr_types.rs  vr_types_binding.rs  vr_vrf.rs  vr_vrf_assign.rs  vr_vrf_stats.rs  vr_vxlan.rs  vrouter_ops.rs
src/genetlink/: family.rs  message.rs  mod.rs
src/netlink/: .#mod.rs  attr.rs  commands.rs  error.rs  message.rs  mod.rs  raw.rs  serialize.rs
src/vr_messages/: error.rs  message_type.rs  mod.rs  sandesh.rs  vr_bridge_table_data.rs  vr_drop_stats.rs  vr_fc_map.rs  vr_flow.rs  vr_flow_response.rs  vr_flow_table_data.rs  vr_hugepage_config.rs  vr_interface.rs  vr_mem_stats.rs  vr_mirror.rs  vr_mpls.rs  vr_nexthop.rs  vr_pkt_droplog.rs  vr_qos_map.rs  vr_response.rs  vr_route.rs  vr_types.rs  vr_types_binding.rs  vr_vrf.rs  vr_vrf_assign.rs  vr_vrf_stats.rs  vr_vxlan.rs  vrouter_ops.rs
tests/: genetlink_tests.rs  vr_bridge_table_data_tests.rs  vr_drop_stats_tests.rs  vr_fc_map_tests.rs  vr_flow_response_tests.rs  vr_flow_table_data_tests.rs  vr_hugepage_config_tests.rs  vr_interface_tests.rs  vr_mem_stats_tests.rs  vr_messages_tests.rs  vr_mirror_tests.rs  vr_mpls_tests.rs  vr_nexthop_tests.rs  vr_pkt_droplog_tests.rs  vr_qos_map_tests.rs  vr_route_tests.rs  vr_types_tests.rs  vr_vrf_tests.rs  vr_vxlan_tests.rs  vrouter_ops_tests.rs
