[package]
name    = "vr_type"
version = "0.1.0"
authors = ["Eishun Kondoh <shun3382@gmail.com>"]
edition = "2018"
links   = "vr_types"
build   = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
netlink-packet-core = "0.2.0"
netlink-sys = "0.3.0"
libc        = "0.2.69"
byteorder   = "1.3.4"
eui48       = "0.4.6"
once_cell   = "1.3.1"
zerocopy    = "0.3.0"
thiserror   = "1.0.20"

[profile.test]
opt-level = 3
debug = true
